--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,5 +41,5 @@ jobs:
       - run:
           name: ionic cipher
           command: |
-            cd ../ionic-ciphers
+            cd python/sdk-basics/ionic-ciphers
             python main.py
