--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,30 +16,39 @@ jobs:
           command: |
             pip install --upgrade pip
             pip install ionicsdk
-#      - run:
-#          name: Install AWS CLI
-#          command: |
-#            pip install awscli --upgrade --user # install AWS CLI
-#            pip install --upgrade --user awscli # upgrade to newest AWS CLI
       - run: 
           name: Canary
           command: |
             cat /etc/redhat-release
             python -V 
             pip show ionicsdk
-#            ~/.local/bin/aws --version
       - run:
           name: Import Profile
           command: |
             mkdir ../.ionicsecurity
-            echo $IONIC_PROFILE | base64 --decode > ../.ionicsecurity/profile.pw
+            echo $IONIC_PROFILE | base64 --decode > ../.ionicsecurity/profiles.pw
       - run:
-          name: profiles
+          name: agents
           command: |
-            cd python/sdk-basics/profiles
+            cd python/sdk-basics/agents
+            python main.py
+      - run:
+          name: encryption
+          command: |
+            cd python/sdk-basics/encryption
             python main.py
       - run:
           name: ionic cipher
           command: |
             cd python/sdk-basics/ionic-ciphers
+            python main.py
+      - run:
+          name: keys
+          command: |
+            cd python/sdk-basics/keys
+            python main.py
+      - run:
+          name: profiles
+          command: |
+            cd python/sdk-basics/profiles
             python main.py
