--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,53 +2,40 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: centos:latest 
+      # Default CircleCI Linux Images for Python is Debian
+      - image: centos:latest
     steps:
+      # Checkout this repo
       - checkout
       - run:
-          name: Update OS and Install packages
+          name: Update OS
           command: |
             yum -y update
+      - run:
+          name: Install pip and Ionic SDK for Python
+          command: |
+            # pip and SDK version depends on Python version installed on the OS
             yum -y install epel-release
             yum -y install python-pip
-      - run:
-          name: Install Ionic SDK
-          command: |
             pip install --upgrade pip
             pip install ionicsdk
       - run: 
           name: Canary
           command: |
-            cat /etc/redhat-release
-            python -V 
+            # After updates and installs, ID versions under test
+            cat /etc/redhat-release   # For CentOS/Red Hat
+            #cat /etc/os-release      # For Ubuntu
+            python -V
             pip show ionicsdk
       - run:
           name: Import Profile
           command: |
+            # Extract and decode base64 string (Active Profile) to ~/.ionicsecurity/profiles.pw, most samples require this profile
+            # IONIC_PROFILE and IONIC_PERSISTOR_PASSWORD are Environemntal Values stored on the CircleCI Dashboard.
             mkdir ../.ionicsecurity
             echo $IONIC_PROFILE | base64 --decode > ../.ionicsecurity/profiles.pw
       - run:
-          name: agents
+          name: Run hello world Python Sample 
           command: |
-            cd python/sdk-basics/agents
-            python main.py
-      - run:
-          name: encryption
-          command: |
-            cd python/sdk-basics/encryption
-            python main.py
-      - run:
-          name: ionic cipher
-          command: |
-            cd python/sdk-basics/ionic-ciphers
-            python main.py
-      - run:
-          name: keys
-          command: |
-            cd python/sdk-basics/keys
-            python main.py
-      - run:
-          name: profiles
-          command: |
-            cd python/sdk-basics/profiles
+            cd python/ionic-helloworld
             python main.py
