--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
       - run: 
           name: Canary
           command: |
-            E After updates and installs, ID versions under test
+            # After updates and installs, ID versions under test
             cat /etc/redhat-release
             python -V 
             pip show ionicsdk
