--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     docker:
       # Default CircleCI Linux Images for Python is Debian
-      - image: centos:latest
+      - image: centos:latest 
     steps:
       # Checkout this repo
       - checkout
@@ -12,9 +12,9 @@ jobs:
           command: |
             yum -y update
       - run:
-          name: Install pip and Ionic SDK for Python
+          name: Install pip and Install Ionic SDK for Python
           command: |
-            # pip and SDK version depends on Python version installed on the OS
+            # pip and SDK version depends on PYthon version installed on the OS
             yum -y install epel-release
             yum -y install python-pip
             pip install --upgrade pip
@@ -23,19 +23,38 @@ jobs:
           name: Canary
           command: |
             # After updates and installs, ID versions under test
-            cat /etc/redhat-release   # For CentOS/Red Hat
-            #cat /etc/os-release      # For Ubuntu
-            python -V
+            cat /etc/redhat-release
+            python -V 
             pip show ionicsdk
       - run:
           name: Import Profile
           command: |
-            # Extract and decode base64 string (Active Profile) to ~/.ionicsecurity/profiles.pw, most samples require this profile
-            # IONIC_PROFILE and IONIC_PERSISTOR_PASSWORD are Environemntal Values stored on the CircleCI Dashboard.
+            # Extract and decode base64 string (Active Profile) to ~/.ionicsecurity/profiles.pw, most samples require a profile there
+            # IONIC_PROFILE and IONIC_PERSISTOR_PASSWORD are Environmental Values store on the CircleCI Dashboard.
             mkdir ../.ionicsecurity
             echo $IONIC_PROFILE | base64 --decode > ../.ionicsecurity/profiles.pw
       - run:
-          name: Run hello world Python Sample 
+          name: Run agents Python Tutorial
           command: |
-            cd python/ionic-helloworld
+            cd python/sdk-basics/agents
+            python main.py
+      - run:
+          name: Run encryption Python Tutorial
+          command: |
+            cd python/sdk-basics/encryption
+            python main.py
+      - run:
+          name: Run ionic cipher Python Tutorial
+          command: |
+            cd python/sdk-basics/ionic-ciphers
+            python main.py
+      - run:
+          name: Run keys Python Tutorial
+          command: |
+            cd python/sdk-basics/keys
+            python main.py
+      - run:
+          name: Run profiles Python Tutorial
+          command: |
+            cd python/sdk-basics/profiles
             python main.py
