--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,8 +32,8 @@ jobs:
             # Extract and decode base64 string (Active Profile) to ~/.ionicsecurity/profiles.pw, most samples require a profile there
             # IONIC_PROFILE and IONIC_PERSISTOR_PASSWORD are Environmental Values store on the CircleCI Dashboard.
             mkdir ../.ionicsecurity
-            #echo $IONIC_PROFILE | base64 --decode > ../.ionicsecurity/profiles.pw
-            cp sample-data/persistors/sample-persistor.pw ../.ionicsecurity/profiles.pw
+            echo $IONIC_PROFILE | base64 --decode > ../.ionicsecurity/profiles.pw
+            #cp sample-data/persistors/sample-persistor.pw ../.ionicsecurity/profiles.pw
       - run:
           name: Run agents Python Tutorial
           command: |
