--- a/java/sdk-advanced/message-expire/app/src/main/AndroidManifest.xml
+++ b/java/sdk-advanced/message-expire/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".ui.SenderActivity"
+            android:name="com.ionic.tutorials.SenderActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,7 +27,7 @@
         </activity>
 
         <activity
-            android:name=".ui.RecipientActivity"
+            android:name="com.ionic.tutorials.RecipientActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Transparent.Dim">
 
