--- a/csharp/sdk-advanced/default-persistor/old/DefaultPersistor.csproj
+++ b/csharp/sdk-advanced/default-persistor/old/DefaultPersistor.csproj
@@ -53,7 +53,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ISAgentSDKNetWrapper">
-      <HintPath>..\..\..\..\..\..\source\csharp\lib\IonicC.NETSDK-1.3.0\ISAgentSDKNetWrapper\Release\x64\ISAgentSDKNetWrapper.dll</HintPath>
+      <HintPath>$(IONIC_SDK_PATH)\ISAgentSDKNetWrapper\$(Configuration)\$(Platform)\ISAgentSDKNetWrapper.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
